--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
      <img src="food-deserts.jpg" class="usaMap" alt="Map of Food Deserts in America by Counties">
      <h2 id="h2Weight">What are food deserts?</h2>
      <div class="smallContainer">
+       <div id="smallCpadding">
      <p>  "Food deserts are defined as parts of the country vapid of fresh fruit, vegetables, and other healthful whole foods, usually found in impoverished areas. This is largely due to a lack of grocery stores, farmers' markets, and healthy food providers." -American Nutrition Association</p>
      <p>  Many communities do not have access to fresh or organic foods. Too many people live closer to a McDonald's than a supermarket. Communities which are economically disadvantaged feel the effects of lack of supermarket and fresh foods far more than more privileged communities.</p>
+   </div>
      </div>
    </div>
    </body>
