--- a/secondpage.html
+++ b/secondpage.html
@@ -13,6 +13,7 @@
      <h2 id="h2Weight">How can we help?</h2>
      <div class="smallContainer">
        <div class="listStyle">
+         <div class="secondpagepadding">
          <article>
          <p>1. Find local food deserts.
          <p>To find a food desert near you, enter your zip code in the USDA’s Food Desert Locator: ers.usda.gov/data/fooddesert.</p>
@@ -22,6 +23,7 @@
       Find food banks, soup kitchens, and other organizations fighting hunger through Food Pantries or Feeding America: foodpantries.org feedingamerica.org/find-your- local-foodbank.</p>
          <p>- Yoga Journal</p>
          </article>
+         </div?
       </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.890960646857!2d-73.97465868485712!3d40.69839904638498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25bc8a4dfdb69%3A0xe79606501af43a67!2sBrooklyn%20Grange%20%40%20Brooklyn%20Navy%20Yard!5e0!3m2!1sen!2sus!4v1569208938432!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe> <!-- google maps gives link to embed -->
      </div>
