--- a/thirdpage.html
+++ b/thirdpage.html
@@ -11,7 +11,7 @@
   <li><a href="thirdpage.html">Inspiration</a></li>
 </ul>
      <h2 id="h2Weight">How People Come Together Now</h2>
-     <div class="smallContainer">
+     <div class="thirdpageC">
        <div class="listStyle">
          <article>
            <a href="https://www.miufi.org/">
